--- a/References.html
+++ b/References.html
@@ -8,5 +8,5 @@
         <a href="Modern Works.html">Modern Works</a>
     </nav>
     <!--I can link images into my html with this img src as long as the path is correct-->
-    <img src="Stock.jpg">
+    <img src="Landscape.jpg">
 </Main>
