updates to style and html

--- a/Classic Works.html
+++ b/Classic Works.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<Title>Classic Works</Title>
-<h3>Classic Works</h3>
+<head>
+    <Title>Classic Works</Title>
+    <h3>Classic Works</h3>
+    <link rel="stylesheet" href="style\main.css">
+</head>
 <Main>
     <nav>
-        <a href="A Good Impression.html">About</a>
+        <a href="index.html">About</a>
         <a href="Modern Works.html">Modern Works</a>
         <a href="References.html">References</a>
     </nav>
