--- a/Modern Works.html
+++ b/Modern Works.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<Title>Modern Works</Title>
-<h3>Modern Works</h3>
+<head>
+    <Title>Modern Works</Title>
+    <h3>Modern Works</h3>
+    <link rel="stylesheet" href="style\main.css">
+</head>
 <Main>
     <nav>
-        <a href="A Good Impression.html">About</a>
+        <a href="index.html">About</a>
         <a href="Classic Works.html">Classic Works</a>
         <a href="References.html">References</a>
     </nav>
