--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <!--This is where my title goes so it appears on the browser tab-->
-<Title>A Good Impression</Title>
+<head>
+    <Title>A Good Impression</Title>
 <!--This header shows up on the webpage-->
-<h1>A Good Impression</h1>
+    <h1>A Good Impression</h1>
 <!--This all shows the main body of my web page-->
+    <link rel="stylesheet" href="style\main.css">
+</head>
 <Main>
     <!--the nav tool allows me to link my pages via seperate htmls-->
     <nav>
@@ -20,5 +23,5 @@
     We wish to display these works while also organizing reference 
     photos for aspiring artists who wish to take a swing at 
     impressionism.  We hope this impression will leave you 
-    impressed!</p> 
+    impressed!!!</p> 
 </Main>
