style updates and img updates

--- a/Classic Works.html
+++ b/Classic Works.html
@@ -11,4 +11,8 @@
         <a href="References.html">References</a>
     </nav>
     <img src="Monet.jpg">
+    <style>
+        img{height: 800px;
+        width: 1000px;}
+    </style>
 </Main>
