--- a/Modern Works.html
+++ b/Modern Works.html
@@ -11,4 +11,8 @@
         <a href="References.html">References</a>
     </nav>
     <img src="padworny.jpg">
+    <style>
+        img{height: 800px;
+        width: 600px;}
+    </style>
 </Main>
