--- a/References.html
+++ b/References.html
@@ -12,4 +12,8 @@
     </nav>
     <!--I can link images into my html with this img src as long as the path is correct-->
     <img src="Landscape.jpg">
+    <style>
+        img{height: 800px;
+        width: 1000px;}
+    </style>
 </Main>
