--- a/Classic Works.html
+++ b/Classic Works.html
@@ -10,9 +10,15 @@
         <a href="Modern Works.html">Modern Works</a>
         <a href="References.html">References</a>
     </nav>
+    <div class = "monet">
     <img src="Monet.jpg">
     <style>
-        img{height: 800px;
-        width: 1000px;}
+        img{height: 80%;
+            width: 80%;}
     </style>
+    <h6>
+        Monet, Claude. “Soleil Levant.”
+    </h6>
+    </div>
+    
 </Main>
