--- a/Modern Works.html
+++ b/Modern Works.html
@@ -10,9 +10,14 @@
         <a href="Classic Works.html">Classic Works</a>
         <a href="References.html">References</a>
     </nav>
+    <div class ="monet">
     <img src="padworny.jpg">
     <style>
-        img{height: 800px;
-        width: 600px;}
+        img{height: 80%;
+        width: 80%;}
     </style>
+    <h6>
+        Padworny, David. “Abstract Expressionism Portrait Face Female Abstract 
+        Realism-Expressionism Oil Painting on Canvas.”</h6>
+    </div>
 </Main>
