--- a/References.html
+++ b/References.html
@@ -10,10 +10,17 @@
         <a href="Classic Works.html">Classic Works</a>
         <a href="Modern Works.html">Modern Works</a>
     </nav>
-    <!--I can link images into my html with this img src as long as the path is correct-->
-    <img src="Landscape.jpg">
-    <style>
-        img{height: 800px;
-        width: 1000px;}
-    </style>
+    <!--I can link images into my html with this img src as long as the path is correct--> 
+    
+    <div class="references">
+        <h6>
+            These images are good references for Impressionist style works.  
+            Use them to your liking! 
+        </h6>
+        <img src="Landscape.jpg">
+        <style>
+        img{height: 80%;
+        width: 80%}
+        </style>
+    </div>
 </Main>
