--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="References.html">References</a>
     </nav>
     <!--I used a smaller header for a different section of the About tab-->
+    <div class="about">
     <h4>About</h4>
    <p>Welcome!  Here we will be collecting various Impression 
     styled artworks to culminate into an online gallery.  There 
@@ -23,5 +24,6 @@
     We wish to display these works while also organizing reference 
     photos for aspiring artists who wish to take a swing at 
     impressionism.  We hope this impression will leave you 
-    impressed!!!</p> 
+    impressed!!!</p>
+</div> 
 </Main>
