css changes and added to about

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
     celebrate Impressionism throughout history and modern days.
     We wish to display these works while also organizing reference 
     photos for aspiring artists who wish to take a swing at 
-    impressionism.  We hope this impression will leave you 
-    impressed!!!</p>
+    impressionism.  We hope impression will leave you 
+    impressed!</p>
+    <p>Impressionism makes use of of thin, yet visisble brush strokes
+    that create a sense of movement within said works, and makes use 
+    of highlights to bring different values to a form.  The forms within
+    Impressionist works usually have a much more gestural quality to them
+    as the brush strokes evoke sketchy linework.  In that sense, Impressionism 
+    was furthering down a path of artists focusing more on using linework
+    and highlights to guide the viewer along a canvas.
+    </p>
 </div> 
 </Main>
