--- a/Classic Works.html
+++ b/Classic Works.html
@@ -12,6 +12,7 @@
     </nav>
     <div class = "monet">
     <img src="Monet.jpg">
+    <img src="Marie_Bracquemond_-_Auf_der_Terrasse_in_Sevres_-_1880-1060x800.jpg"
     <style>
         img{height: 80%;
             width: 80%;}
