--- a/Modern Works.html
+++ b/Modern Works.html
@@ -12,6 +12,7 @@
     </nav>
     <div class ="monet">
     <img src="padworny.jpg">
+    <img src="Erin Hanson Crystal Light.jpg"
     <style>
         img{height: 60%;
         width: 60%;}
