add imgs and descriptions

--- a/Classic Works.html
+++ b/Classic Works.html
@@ -12,14 +12,19 @@
     </nav>
     <div class = "monet">
     <img src="Monet.jpg">
-    <img src="Marie_Bracquemond_-_Auf_der_Terrasse_in_Sevres_-_1880-1060x800.jpg"
+    <h6>
+        Monet, Claude. “Soleil Levant.”
+    </h6>
+    <img src="Marie_Bracquemond_-_Auf_der_Terrasse_in_Sevres.jpg">
+    <h6>
+        Bracquemond. Marie, "Auf der Terrasse in Sevres."
+    </h6>
     <style>
         img{height: 80%;
             width: 80%;}
     </style>
-    <h6>
-        Monet, Claude. “Soleil Levant.”
-    </h6>
+    
+  
     </div>
     
 </Main>
