--- a/Modern Works.html
+++ b/Modern Works.html
@@ -12,13 +12,18 @@
     </nav>
     <div class ="monet">
     <img src="padworny.jpg">
-    <img src="Erin Hanson Crystal Light.jpg"
+    <h6>
+        Padworny, David. “Abstract Expressionism Portrait Face Female Abstract 
+        Realism-Expressionism Oil Painting on Canvas.”
+    </h6>
+    <img src="Erin Hanson Crystal Light.jpg">
+    <h6>
+        Hanson, Erin. "Crystal Light."
+    </h6>
     <style>
         img{height: 60%;
         width: 60%;}
     </style>
-    <h6>
-        Padworny, David. “Abstract Expressionism Portrait Face Female Abstract 
-        Realism-Expressionism Oil Painting on Canvas.”</h6>
+    
     </div>
 </Main>
