--- a/index.html
+++ b/index.html
@@ -17,21 +17,56 @@
     <!--I used a smaller header for a different section of the About tab-->
     <div class="about">
     <h4>About</h4>
-   <p>Welcome!  Here we will be collecting various Impression 
-    styled artworks to culminate into an online gallery.  There 
-    will be no focus on specific time periods in order to
-    celebrate Impressionism throughout history and modern days.
-    We wish to display these works while also organizing reference 
-    photos for aspiring artists who wish to take a swing at 
-    impressionism.  We hope impression will leave you 
-    impressed!</p>
-    <p>Impressionism makes use of of thin, yet visisble brush strokes
-    that create a sense of movement within said works, and makes use 
-    of highlights to bring different values to a form.  The forms within
-    Impressionist works usually have a much more gestural quality to them
-    as the brush strokes evoke sketchy linework.  In that sense, Impressionism 
-    was furthering down a path of artists focusing more on using linework
-    and highlights to guide the viewer along a canvas.
+   <p>
+        Welcome!  Here we will be collecting various Impression 
+        styled artworks to culminate into an online gallery.  There 
+        will be no focus on specific time periods in order to
+        celebrate Impressionism throughout history and modern days.
+        We wish to display these works while also organizing reference 
+        photos for aspiring artists who wish to take a swing at 
+        impressionism.  We hope impression will leave you 
+        impressed!
+    </p>
+    <p>
+        Impressionism makes use of of thin, yet visisble brush strokes
+        that create a sense of movement within said works, and makes use 
+        of shadows and highlights to bring different values to a form.  The forms
+        withinImpressionist works usually have a much more gestural quality to them
+        as the brush strokes evoke sketchy linework.  In that sense, Impressionism 
+        was furthering down a path of artists focusing more on using linework
+        and highlights to guide the viewer along a canvas.
+    </p>
+    <h4>History</h4>
+    <h6>First Impressions</h6>
+    <p>
+        Impressionism saw it's beginnings in Paris, France from an art exhibit
+        held by members of the Anonymous Society of Painters, Sculptors, Printmakers,
+        etc.: Edgar Degas, Camille Pissarro, Claude Monet, and others.  The art 
+        exhibit of said members would be more akin to a culmination of eyesores 
+        than anything else as per conservative critics at the time do to the artists'
+        rough and sketchy design philosophy.  However, progressive-leaning reviewers 
+        were marveled by how said artists captured modern life in a manner that would
+        revolutionize the painters world at the time, thus Impressionism was born.
+    </p>
+    <p>
+        Impressionism had not been a name each member agreed upon, as they wished not
+        to be viewed as a school or movement, but a critic of Claude Monet's, “<b>Soleil 
+        Levant</b>”, would help coin the term <i>Impressionism</i> by referring to said 
+        work as not a finished painting, but rather an Impression of a sunrise.  Art can 
+        definitely be seen as a tool for spite, so it isn't too suprising that the criticism
+        by Louis Leroy would help fuel the movement. 
+    </p>
+    <p>
+    <h6>Adoption</h6>
+        As previously mentioned, Impressionism makes use of highlights and shadows to
+        bring different values to a form, but these values would be made using more vivid
+        colors compared to the standard blacks, grays, and whites.  This coupled with
+        the loose and gestural brush strokes used had given impressionism it's casual aura,
+        an aura that rapidly grew to be the manner in which modern society shall be 
+        depicted within the artistic society of the time.  Impressionism had even been
+        accepted by the official <u>Salon</u>, the art gallery hosted by Académie des Beaux-Arts,
+        ironically of which the members of the Anonymous Society of Painters, Sculptors, 
+        Printmakers, etc. were independent of.    
     </p>
 </div> 
 </Main>
