--- a/index.html
+++ b/index.html
@@ -68,5 +68,26 @@
         ironically of which the members of the Anonymous Society of Painters, Sculptors, 
         Printmakers, etc. were independent of.    
     </p>
+    <p>
+        <h4>Present Impressions</h4>
+        Impressionism was the beginning of the age of modern art, providing artists a simpler 
+        method of artistic expression that allows for more stylistic freedom within painting,
+        drawing, sculpting, printmaking, etc..  A personal favorite aspect regarding Impressionism
+        to me is it's blending of drawing and painting.  Brush strokes are clearly defined with 
+        Impressionist style works whereas the expecation with classical art was capture the moment
+        in a sense that the viewer could truly envision themselves at the scene as if it were
+        happening in front of them, as if a past-era form of photography.  The method of 
+        Impressionism captures the moment more like a memory, where the important information is
+        exemplified, while smaller details are tapered off.
+    </p>
+    <p>
+        <h4><u><b>YOUR</b></u> First Impressions</h4>
+        I compiled a short list of images that would work great as Impressionist style works.  I 
+        reccomend tracing out the lines and shapes of the forms present, especially for begginners,
+        but then feel free to express yourselves with various ranges of colors, and try to avoid
+        blacks, whites, and grays.  For example, in the second image of the old man, your highlights
+        could consist of bright yellows and pinks, your midtones could consist of orange tones, and 
+        your shadows could complement with say an olive green or ranges of blues and violets.
+    </p>
 </div> 
 </Main>
